# Edge-Cloud_Resource_Allocation_for_IoT

./: .gitignore  CMakeLists.txt  README-pt-br.md  README.md
analysis/: graph.xlsm
analysis/Results/Heuristic/Greedy_DescAsc/: D300_S105_4G.txt  D400_S105_4G.txt  D500_S105_4G.txt
analysis/Results/Heuristic/Random/: D300_S105_4G.txt  D400_S105_4G.txt  D500_S105_4G.txt
analysis/Results/Mathematical/Minimize_Cost/: D300_S105_4G.txt  D400_S105_4G.txt  D500_S105_4G.txt
analysis/Results/Mathematical/Minimize_Cost/models/: D300_S105_4G.lp  D400_S105_4G.lp
analysis/Results/MetaHeuristic/SA/Greedy_DescAsc/: D300_S105_4G.txt  D400_S105_4G.txt  D500_S105_4G.txt
analysis/Results/MetaHeuristic/SA/Random/: D300_S105_4G.txt  D400_S105_4G.txt  D500_S105_4G.txt
data/baseFiles/: CC_5.txt  Devices_1000.txt  EC_10.txt  EC_100.txt  EC_50.txt  Services.txt  Services_Constante.txt
data/baseFiles/original/: CC_5.txt  main.py
include/: DataGenerator.h  FileManager.h  Heuristics.h  MathModels.h  MetaHeuristics.h  NetworkResourceAllocation.h  structs.h  utils.h
src/: main.cpp
